# Pod-3-

./: .dockerignore  .env.example  .gitignore  API_ENDPOINTS_DOCUMENTATION.md  DATABASE_SCHEMA_DOCUMENTATION.md  DOCKER_PUSH_GUIDE.md  Dockerfile  QUICKSTART.md  README.md  README_REGISTRATION_LOGIN.md  docker-compose.yml  pyproject.toml  requirements.txt  rules.md  run.sh
.agent/workflows/: audio_interview_flow.md
.github/workflows/: branch-governance.yml  docker-build-push.yml
OneDrive/Desktop/Pod-3--main/Pod-3--main/: .env.example  pyproject.toml
OneDrive/Desktop/Pod-3--main/Pod-3--main/alembic/: env.py
OneDrive/Desktop/Pod-3--main/Pod-3--main/alembic/versions/: 1ee1c906bb02_remove_score_column.py  fba08d3a18bc_add_interview_system_tables.py
OneDrive/Desktop/Pod-3--main/Pod-3--main/app/controllers/: router.py
OneDrive/Desktop/Pod-3--main/Pod-3--main/app/models/: __init__.py  resume.py
OneDrive/Desktop/Pod-3--main/Pod-3--main/app/prompts/: resume_parser.py
OneDrive/Desktop/Pod-3--main/Pod-3--main/tmp/: verify_limit.py
alembic/: env.py
alembic/versions/: 39ec670c6d48_create_listening_tables.py  5b9db33a16fc_create_reading_tables.py  620aa2067f08_remove_description_and_instructions_.py  7f63bfa8a902_add_is_correct_column_to_user_responses.py  80ce8d6daf0a_create_grammar_tables.py  8eb47ef58780_make_session_id_nullable_in_user_.py  a91b2c3d4e5f_add_cefr_grading_fields.py  b2f4c8d9e1a7_create_admin_users_table.py  ce4b0ae28bd6_create_users_table.py  dd383972b9d9_add_options_column_to_questions.py  eb8a0f843e26_added_users_onboarding_column.py
app/: main.py
app/config/: database.py  settings.py
app/controllers/: admin.py  progress.py  router.py
app/controllers/routes/: __init__.py  admin.py  auth.py  grammar.py  interview.py  listening.py  mock_interview.py  onboarding.py  practice.py  progress.py  reading.py
app/models/: __init__.py  _register.py  analytics_models.py  assessment_status.py  base.py  grammar.py  interview_system.py  listening.py  progress.py  reading.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  grammar.py  interview.py  listening.py  onboarding.py  progress.py  reading.py  resume.py
app/services/: __init__.py  admin_auth_service.py  auth_service.py  base_assessment_service.py  cefr_grading_service.py  grammar_service.py  interview_service.py  listening_service.py  nlp_parser.py  onboarding_service.py  openai_utils.py  pronunciation_analyzer.py  pronunciation_service.py  question_service.py  reading_service.py  transcribe.py
app/utils/: auth.py  exceptions.py  validators.py
resume-backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
tmp/: convert_to_pdf.py
(+7 files in other folders)
